--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^9.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "typescript": "5.0.3"
   }
 }
