--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,11 +21,15 @@
     "framer-motion": "^10.11.2",
     "i": "^0.3.7",
     "next": "13.2.4",
+    "next-sitemap": "^4.0.7",
     "npm": "^9.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/gtag.js": "^0.0.12"
   }
 }
